2013-02-18  Filip Pizlo  <fpizlo@apple.com>

        Fix indentation of JSGlobalObject.h and JSGlobalObjectFunctions.h

        Rubber stamped by Mark Hahnenberg.

        * runtime/JSGlobalObject.h:
        * runtime/JSGlobalObjectFunctions.h:

2013-02-18  Filip Pizlo  <fpizlo@apple.com>

        Fix indention of Operations.h

        Rubber stamped by Mark Hahnenberg.

        * runtime/Operations.h:

2013-02-18  Filip Pizlo  <fpizlo@apple.com>

        Remove DFG::SpeculativeJIT::isKnownNumeric(), since it's not called from anywhere.

        Rubber stamped by Andy Estes.

        * dfg/DFGSpeculativeJIT.cpp:
        (DFG):
        * dfg/DFGSpeculativeJIT.h:
        (SpeculativeJIT):

2013-02-18  Filip Pizlo  <fpizlo@apple.com>

        Remove DFG::SpeculativeJIT::isStrictInt32(), since it's not called from anywhere.

        Rubber stampted by Andy Estes.

        * dfg/DFGSpeculativeJIT.cpp:
        (DFG):
        * dfg/DFGSpeculativeJIT.h:
        (SpeculativeJIT):

2013-02-18  Filip Pizlo  <fpizlo@apple.com>

        Remove dead code for ValueToNumber from the DFG.

        Rubber stamped by Andy Estes.
        
        We killed ValueToNumber at some point, but forgot to kill all of the backend support
        for it.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::handleMinMax):
        * dfg/DFGOperations.cpp:
        * dfg/DFGOperations.h:
        * dfg/DFGSpeculativeJIT.h:
        (SpeculativeJIT):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        * dfg/DFGSpeculativeJIT64.cpp:

2013-02-17  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed buildfix for JSVALUE32_64 builds after r143147.

        * jit/JIT.h:

2013-02-17  Filip Pizlo  <fpizlo@apple.com>

        Move all Structure out-of-line inline methods to StructureInlines.h
        https://bugs.webkit.org/show_bug.cgi?id=110024

        Rubber stamped by Mark Hahnenberg and Sam Weinig.
        
        This was supposed to be easy.
        